fixed notifications z-index bug

--- a/scss/_notifications.scss
+++ b/scss/_notifications.scss
@@ -1,55 +1,58 @@
 .notifications {
 
     position: fixed;
-    height: 100%;
-    width: 100%;
+    display: inline-block;
     padding: 0;
+    top: 0;
+    right: 0;
 
-    .row {
-        height: 100%;
-        margin: 0;
+    &>div {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        padding: 0 15px;
+        max-height: 100%;
+        overflow-y: auto;
+        overflow-x: hidden;
 
-        &>div {
-            display: flex;
-            flex-direction: column;
-            flex-wrap: nowrap;
-            padding-right: 15px;
-            max-height: 100%;
-            overflow-y: auto;
-            overflow-x: hidden;
-            z-index: 0;
+        div {
+            flex: 1;
+            position: relative;
+            padding: 5px 30px 5px 8px;
+            width: 100%;
+            min-height: 42px;
+            border: 1px solid;
 
-            div {
-                flex: 1;
-                position: relative;
-                padding: 5px 30px 5px 8px;
-                width: 100%;
-                min-height: 42px;
-                border: 1px solid;
-
-                i {
-                    position: absolute;
-                    top: 5px;
-                    right: 10px;
-
-                    @media (max-width: 992px) {
-                        top: calc(50% - 8px);
-                    }
-
-                    &:hover {
-                        cursor: pointer;
-                        opacity: .5;
-                    }
-                }
-
-                // -webkit-transition: all 500ms ease-in-out;
-                // -moz-transition: all 500ms ease-in-out;
-                // -ms-transition: all 500ms ease-in-out;
-                // -o-transition: all 500ms ease-in-out;
-                // transition: all 500ms ease-in-out;
+            @media (max-width: 768px) {
+                font-size: 8pt;
             }
 
+            @media (min-width: 768px) and (max-width: 992px) {
+                font-size: 10pt;
+            }
+
+            i {
+                position: absolute;
+                top: 5px;
+                right: 10px;
+
+                @media (max-width: 992px) {
+                    top: calc(50% - 8px);
+                }
+
+                &:hover {
+                    cursor: pointer;
+                    opacity: .5;
+                }
+            }
+
+            // -webkit-transition: all 500ms ease-in-out;
+            // -moz-transition: all 500ms ease-in-out;
+            // -ms-transition: all 500ms ease-in-out;
+            // -o-transition: all 500ms ease-in-out;
+            // transition: all 500ms ease-in-out;
         }
+
     }
 
 }
