--- a/scss/master.scss
+++ b/scss/master.scss
@@ -84,7 +84,6 @@ html, body {
 
 .content {
     height: 100%;
-    z-index: 10;
 
     .login {
         display: none;
@@ -108,10 +107,42 @@ html, body {
     .session {
         display: none;
         min-height: 100%;
-        text-align: center;
+        flex-direction: column;
+
+        .lobby-list {
+            text-align: center;
+            padding: 10px;
+            min-height: 40vh;
+            margin-top: 15px;
+        }
 
         #trigger-session {
             display: none;
+        }
+    }
+}
+
+.profile-desktop {
+    @media (min-width: 768px) {
+
+    }
+}
+
+.profile-mobile-row {
+    display: none;
+    @media (max-width: 768px) {
+        display: block;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+
+        .profile-mobile {
+            position: relative;
+            height: 12vh;
+            margin-bottom: 0;
+            -webkit-box-shadow: 0 -4px 0 0 rgba(0, 0, 0, 0.2);
+            -moz-box-shadow: 0 -4px 0 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0 -4px 0 0 rgba(0, 0, 0, 0.2);
         }
     }
 }
